test_voice_comments update

--- a/tasks/templates/test.html
+++ b/tasks/templates/test.html
@@ -143,4 +143,5 @@
 <script src="{% static 'js/test/test_dashboard.js' %}"></script>
 <script src="{% static 'js/filelist.js' %}"></script>
 <script src="{% static 'js/test/test_filelist.js' %}"></script>
+<script src="{% static 'js/test/test_voice_comments_menu.js' %}"></script>
 </body>
