--- a/tasks/templates/preferences.html
+++ b/tasks/templates/preferences.html
@@ -1,4 +1,4 @@
-{% extends 'base_content_without_message.html' %}
+{% extends 'base_content.html' %}
 {% load static %}
 {% block content %}
 <link href="{% static 'css/custom.css' %}" rel="stylesheet">
