--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -737,7 +737,7 @@ Dark mode
     color: #7A7A7A;
 }
 
-.dark-mode #start-footer .start-btn {
+.dark-mode .start-btn {
     color: rgb(211, 211, 211);
     background-color: #7A7A7A;
     border-color: #7A7A7A;
