--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -538,77 +538,13 @@ textarea:focus {
 /**
     delete mark button
  */
-.delete-mark-btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 45px;
-  height: 45px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition-duration: 0.3s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-  background: rgb(255, 135, 65);
-  background: linear-gradient(
-    250deg,
-    rgba(255, 135, 65, 1) 15%,
-    rgba(255, 65, 65, 1) 65%
-  );
+.btn-custom {
+    padding: 20px;  /* Adjust as needed, equal padding creates circle  */
+    border-radius: 150%;  /* This needs to be 100% for padding approach */
+    opacity: 0.8;
+    display: flex;
 }
 
-/* plus sign */
-.sign {
-  width: 100%;
-  transition-duration: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sign svg {
-  width: 17px;
-}
-
-.sign svg path {
-  fill: white;
-}
-/* text */
-.text {
-  position: absolute;
-  right: 0%;
-  width: 0%;
-  opacity: 0;
-  color: white;
-  font-size: 1.2em;
-  font-weight: 600;
-  transition-duration: 0.3s;
-}
-/* hover effect on button width */
-.delete-mark-btn:hover {
-  width: 125px;
-  border-radius: 40px;
-  transition-duration: 0.3s;
-}
-
-.delete-mark-btn:hover .sign {
-  width: 30%;
-  transition-duration: 0.3s;
-  padding-left: 20px;
-}
-/* hover effect button's text */
-.delete-mark-btn:hover .text {
-  opacity: 1;
-  width: 70%;
-  transition-duration: 0.3s;
-  padding-right: 0;
-}
-/* button click effect*/
-.delete-mark-btn:active {
-  transform: translate(2px, 2px);
-}
 
 /**
     button group
@@ -618,8 +554,72 @@ textarea:focus {
     background: rgba(255, 255, 255, 0.7); /* Semi-transparent white background */
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 5px;
+    padding: 0;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     position: absolute;
     display: none;
+    height: auto;
+}
+
+/**
+    quotation section css
+*/
+blockquote{
+  display:block;
+  background: #fff;
+  padding: 15px 20px 15px 45px;
+  margin: 0 0 20px;
+  position: relative;
+
+  /*Font*/
+  font-family: Georgia, serif;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #666;
+  text-align: justify;
+
+  /*Borders - (Optional)*/
+  border-left: 15px solid #c76c0c;
+  border-right: 2px solid #c76c0c;
+
+  /*Box Shadow - (Optional)*/
+  -moz-box-shadow: 2px 2px 15px #ccc;
+  -webkit-box-shadow: 2px 2px 15px #ccc;
+  box-shadow: 2px 2px 15px #ccc;
+}
+
+blockquote::before{
+  content: "\201C"; /*Unicode for Left Double Quote*/
+
+  /*Font*/
+  font-family: Georgia, serif;
+  font-size: 60px;
+  font-weight: bold;
+  color: #999;
+
+  /*Positioning*/
+  position: absolute;
+  left: 10px;
+  top:5px;
+}
+
+blockquote::after{
+  /*Reset to make sure*/
+  content: "";
+}
+
+blockquote a{
+  text-decoration: none;
+  background: #eee;
+  cursor: pointer;
+  padding: 0 3px;
+  color: #c76c0c;
+}
+
+blockquote a:hover{
+ color: #666;
+}
+
+blockquote em{
+  font-style: italic;
 }
