--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -99,7 +99,7 @@
 
 						<!-- Text Comment tab -->
 						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
-                            <button class="btn-primary" id="addCommentBtn" onclick="addComment()">+Add Note</button>
+                            <button class="btn-primary" id="addCommentBtn" onclick="addComment()" style="display: none">+Add Note</button>
                             <div class="input-group mb-3" id="inputText" style="display: none;">
                                 <div style="display: flex;">
                                     <img src="{{ upload.owner.avatar_url }}" alt="gravatar" style="margin-right: 10px;margin-top: 12px;width: 30px; height: 30px; border-radius: 30px">
