Quick syntax fix

--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -19,9 +19,11 @@
                 </div>
                 <h4 class="noto-sans intro-header">Upload Your First PDF File to Get Start</h4>
             </div>
-{#                <button type="button" class="btn start-btn" onclick="window.location='{% url 'upload_file' %}'">#}
-{#                    Start Upload#}
-{#                </button>#}
+                <!--
+                <button type="button" class="btn start-btn" onclick="window.location='{% url 'upload_file' %}'">
+                    Start Upload
+                </button>
+                -->
             <button class="btn start-btn" type="button" onclick="window.location='{% url 'upload_file' %}'">
               Get Started
               <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
