fix "upload button out of view" issue

--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -3,10 +3,10 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '/css/upload_file.css' %}">
 
-    <div class="relative min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 relative items-center"
+    <div class="relative min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 relative items-center"
          style="background-color: transparent">
         <div class="absolute bg-dark-subtle inset-0 z-0"></div>
-        <div class="sm:max-w-lg w-full p-10 rounded-xl z-10 form-container">
+        <div class="sm:max-w-lg w-full p-4 rounded-xl z-10 form-container">
             <div class="text-center">
                 <h2 class="mt-5 text-3xl font-bold text-gray-900" id="upload-header">
                     Upload
