fix the overflow issue

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>PDF Voice Comment</title>
   </head>
-  <body class="{{user.theme_preference}}">
+  <body class="{{user.theme_preference}}" style="overflow-y:auto">
   </body>
     {% block body %}
     {% endblock %}
