--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -2,117 +2,92 @@
 {% block content %}
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '/css/upload_file.css' %}">
-
-    <div class="relative min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 relative items-center"
-         style="background-color: transparent">
-        <div class="absolute bg-dark-subtle inset-0 z-0"></div>
-        <div class="sm:max-w-lg w-full p-4 rounded-xl z-10 form-container">
+    
+    <div class="relative min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8">
+        <div class="absolute inset-0 z-0 bg-dark-subtle"></div>
+        <div class="relative max-w-lg w-full p-4 rounded-xl z-10 form-container">
             <div class="text-center">
-                <h2 class="mt-5 text-3xl font-bold text-gray-900" id="upload-header">
+                <h2 class="mt-4 text-3xl font-bold text-gray-900" id="upload-header">
                     Upload
                 </h2>
                 <p class="mt-2 text-sm text-gray-400">File size no more than 100M</p>
             </div>
-
-            <div class="container mt-8 space-y-2">
-                <form class="mt-2 space-y-2" action="{% url 'upload_file' %}" method="post"
-                      enctype="multipart/form-data" onsubmit="enableUploadButton()" id="upload-form">
+    
+            <div class="container mt-4 space-y-2" style="height: 80%;">
+                <form class="mt-2 space-y-2" style="height: 100%;" action="{% url 'upload_file' %}" method="post" enctype="multipart/form-data" onsubmit="enableUploadButton()" id="upload-form">
                     {% csrf_token %}
                     <div class="grid grid-cols-1 space-y-2">
                         <label class="text-sm font-bold text-gray-500 tracking-wide">Share To (optional)</label>
-                        <input name="share"
-                               class="text-base p-2 rounded-lg focus:outline-none focus:border-indigo-500 share-input"
-                               type="" placeholder="Email or Username">
+                        <input name="share" class="text-base p-2 rounded-lg focus:outline-none focus:border-indigo-500 share-input" type="" placeholder="Email or Username">
                     </div>
-
+                
                     <div class="grid grid-cols-1 space-y-2">
                         <label class="text-sm font-bold text-gray-500 tracking-wide">Attach Document</label>
                         <div class="flex items-center justify-center w-full drag-zone" id="drop_zone">
-                            <label class="flex flex-col rounded-lg border-4 border-dashed w-full h-60 p-10 group text-center">
+                            <label class="flex flex-col rounded-lg border-4 border-dashed w-full h-60 p-8 group text-center">
                                 <div class="h-full w-full text-center flex flex-col items-center justify-center items-center">
-                                    <div class="flex flex-auto max-h-48 w-2/5 mx-auto -mt-2 p-4">
+                                    <div class="flex flex-auto max-h-40 w-2/5 mx-auto -mt-2 p-4">
                                         <svg t="1709394247559" id="file-icon" class="icon" viewBox="0 0 1024 1024"
-                                             version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6773" width="70"
-                                             height="70">
+                                             version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="6773" width="70px"
+                                             height="70px">
                                             <path d="M131.3 376.7H64.2v483.2c0 37.1 30.3 67.3 67.1 67.3H892c37 0 67.1-30.3 67.1-67.3V376.7H131.3z m768.3-164.1H798.2c-2 0-4 0.1-6.1 0.3h-306v-54.6c0-33.2-26.9-60.1-60-60.1H124.5c-33.2 0-60 27-60 60.1v174h894.9V272.4c-0.1-32.9-27-59.8-59.8-59.8z"
                                                   fill="" p-id="6774"></path>
                                         </svg>
-                                        {#                                        <svg t="1709500412224" id="success-icon" class="icon" viewBox="0 0 1024 1024"#}
-                                        {#                                             version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4991" width="70"#}
-                                        {#                                             height="70">#}
-                                        {#                                            <path d="M512 929.959184c-230.4 0-417.959184-187.559184-417.959184-417.959184s187.559184-417.959184 417.959184-417.959184 417.959184 187.559184 417.959184 417.959184-187.559184 417.959184-417.959184 417.959184z"#}
-                                        {#                                                  fill="#16C4AF" p-id="4992"></path>#}
-                                        {#                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388l-104.489796-104.489796c-8.359184-8.359184-8.359184-21.420408 0-29.779591 8.359184-8.359184 21.420408-8.359184 29.779592 0l104.489795 104.489796c8.359184 8.359184 8.359184 21.420408 0 29.779591-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"#}
-                                        {#                                                  fill="#DCFFFA" p-id="4993"></path>#}
-                                        {#                                            <path d="M459.755102 637.387755c-5.22449 0-10.44898-2.089796-14.628571-6.269388-8.359184-8.359184-8.359184-21.420408 0-29.779591l208.979591-208.979592c8.359184-8.359184 21.420408-8.359184 29.779592 0 8.359184 8.359184 8.359184 21.420408 0 29.779592l-208.979592 208.979591c-4.702041 4.179592-9.926531 6.269388-15.15102 6.269388z"#}
-                                        {#                                                  fill="#DCFFFA" p-id="4994"></path>#}
-                                        {#                                        </svg>#}
+
                                         <svg height="70px" width="70px" version="1.1" id="success-icon" class="icon"
                                              xmlns="http://www.w3.org/2000/svg"
                                              xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 309.267 309.267"
                                              xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
                                                stroke-linejoin="round"></g>
-                                            <g id="SVGRepo_iconCarrier"> <g> <path style="fill:#E2574C;"
-                                                                                   d="M38.658,0h164.23l87.049,86.711v203.227c0,10.679-8.659,19.329-19.329,19.329H38.658 c-10.67,0-19.329-8.65-19.329-19.329V19.329C19.329,8.65,27.989,0,38.658,0z"></path>
-                                                <path style="fill:#B53629;"
-                                                      d="M289.658,86.981h-67.372c-10.67,0-19.329-8.659-19.329-19.329V0.193L289.658,86.981z"></path>
-                                                <path style="fill:#FFFFFF;"
-                                                      d="M217.434,146.544c3.238,0,4.823-2.822,4.823-5.557c0-2.832-1.653-5.567-4.823-5.567h-18.44 c-3.605,0-5.615,2.986-5.615,6.282v45.317c0,4.04,2.3,6.282,5.412,6.282c3.093,0,5.403-2.242,5.403-6.282v-12.438h11.153 c3.46,0,5.19-2.832,5.19-5.644c0-2.754-1.73-5.49-5.19-5.49h-11.153v-16.903C204.194,146.544,217.434,146.544,217.434,146.544z M155.107,135.42h-13.492c-3.663,0-6.263,2.513-6.263,6.243v45.395c0,4.629,3.74,6.079,6.417,6.079h14.159 c16.758,0,27.824-11.027,27.824-28.047C183.743,147.095,173.325,135.42,155.107,135.42z M155.755,181.946h-8.225v-35.334h7.413 c11.221,0,16.101,7.529,16.101,17.918C171.044,174.253,166.25,181.946,155.755,181.946z M106.33,135.42H92.964 c-3.779,0-5.886,2.493-5.886,6.282v45.317c0,4.04,2.416,6.282,5.663,6.282s5.663-2.242,5.663-6.282v-13.231h8.379 c10.341,0,18.875-7.326,18.875-19.107C125.659,143.152,117.425,135.42,106.33,135.42z M106.108,163.158h-7.703v-17.097h7.703 c4.755,0,7.78,3.711,7.78,8.553C113.878,159.447,110.863,163.158,106.108,163.158z"></path> </g> </g></svg>
-
+                                            <g id="SVGRepo_iconCarrier"> <g> 
+                                                <path style="fill:#E2574C;" d="M38.658,0h164.23l87.049,86.711v203.227c0,10.679-8.659,19.329-19.329,19.329H38.658 c-10.67,0-19.329-8.65-19.329-19.329V19.329C19.329,8.65,27.989,0,38.658,0z"></path>
+                                                <path style="fill:#B53629;" d="M289.658,86.981h-67.372c-10.67,0-19.329-8.659-19.329-19.329V0.193L289.658,86.981z"></path>
+                                                <path style="fill:#FFFFFF;" d="M217.434,146.544c3.238,0,4.823-2.822,4.823-5.557c0-2.832-1.653-5.567-4.823-5.567h-18.44 c-3.605,0-5.615,2.986-5.615,6.282v45.317c0,4.04,2.3,6.282,5.412,6.282c3.093,0,5.403-2.242,5.403-6.282v-12.438h11.153 c3.46,0,5.19-2.832,5.19-5.644c0-2.754-1.73-5.49-5.19-5.49h-11.153v-16.903C204.194,146.544,217.434,146.544,217.434,146.544z M155.107,135.42h-13.492c-3.663,0-6.263,2.513-6.263,6.243v45.395c0,4.629,3.74,6.079,6.417,6.079h14.159 c16.758,0,27.824-11.027,27.824-28.047C183.743,147.095,173.325,135.42,155.107,135.42z M155.755,181.946h-8.225v-35.334h7.413 c11.221,0,16.101,7.529,16.101,17.918C171.044,174.253,166.25,181.946,155.755,181.946z M106.33,135.42H92.964 c-3.779,0-5.886,2.493-5.886,6.282v45.317c0,4.04,2.416,6.282,5.663,6.282s5.663-2.242,5.663-6.282v-13.231h8.379 c10.341,0,18.875-7.326,18.875-19.107C125.659,143.152,117.425,135.42,106.33,135.42z M106.108,163.158h-7.703v-17.097h7.703 c4.755,0,7.78,3.711,7.78,8.553C113.878,159.447,110.863,163.158,106.108,163.158z"></path> </g> </g>
+                                        </svg>
                                     </div>
                                     <small id="file-name"></small>
-                                    <p class="pointer-none text-gray-500 " id="upload-instruction"><span
-                                            class="text-sm">Drag & Drop</span> files here <br/></p>
-                                    <p class="pointer-none text-gray-500 " id="success-alert"><span class="text-sm">File Select Success! Click Upload!</span><br/>
-                                    </p>
-
+                                    <p class="pointer-none text-gray-500 " id="upload-instruction"><span class="text-sm">Drag & Drop</span> files here <br/></p>
+                                    <p class="pointer-none text-gray-500 " id="success-alert"><span class="text-sm">File Select Success! Click Upload!</span><br/></p>
                                     <div style="display: none" id="file-input">
-                                        {{ form.file }}
+                                        {{ form.file }}                                    
                                     </div>
                                 </div>
                             </label>
                         </div>
                         <p class="text-sm text-gray-300">
                             <span>File type: only pdf types of files</span>
-
                         </p>
                         {% if file_url and simple_file_name %}
-
-                            <div class="uploaded uploaded-file">
-                                <div class="file-content">
-                                    <div class="file-icon">
-                                        <svg t="1709406002447" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                                             xmlns="http://www.w3.org/2000/svg" p-id="5070" width="30" height="30">
-                                            <path d="M531.3 574.4l0.3-1.4c5.8-23.9 13.1-53.7 7.4-80.7-3.8-21.3-19.5-29.6-32.9-30.2-15.8-0.7-29.9 8.3-33.4 21.4-6.6 24-0.7 56.8 10.1 98.6-13.6 32.4-35.3 79.5-51.2 107.5-29.6 15.3-69.3 38.9-75.2 68.7-1.2 5.5 0.2 12.5 3.5 18.8 3.7 7 9.6 12.4 16.5 15 3 1.1 6.6 2 10.8 2 17.6 0 46.1-14.2 84.1-79.4 5.8-1.9 11.8-3.9 17.6-5.9 27.2-9.2 55.4-18.8 80.9-23.1 28.2 15.1 60.3 24.8 82.1 24.8 21.6 0 30.1-12.8 33.3-20.5 5.6-13.5 2.9-30.5-6.2-39.6-13.2-13-45.3-16.4-95.3-10.2-24.6-15-40.7-35.4-52.4-65.8zM421.6 726.3c-13.9 20.2-24.4 30.3-30.1 34.7 6.7-12.3 19.8-25.3 30.1-34.7z m87.6-235.5c5.2 8.9 4.5 35.8 0.5 49.4-4.9-19.9-5.6-48.1-2.7-51.4 0.8 0.1 1.5 0.7 2.2 2z m-1.6 120.5c10.7 18.5 24.2 34.4 39.1 46.2-21.6 4.9-41.3 13-58.9 20.2-4.2 1.7-8.3 3.4-12.3 5 13.3-24.1 24.4-51.4 32.1-71.4z m155.6 65.5c0.1 0.2 0.2 0.5-0.4 0.9h-0.2l-0.2 0.3c-0.8 0.5-9 5.3-44.3-8.6 40.6-1.9 45 7.3 45.1 7.4z"
-                                                  p-id="5071"></path>
-                                            <path d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326z m1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z"
-                                                  p-id="5072"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="file-info">
-                                        <div class="file-name">
+                        <div class="uploaded uploaded-file">
+                            <div class="file-content">
+                                <div class="file-icon">
+                                    <svg t="1709406002447" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                                        xmlns="http://www.w3.org/2000/svg" p-id="5070" width="30px" height="30px">
+                                        <path d="M531.3 574.4l0.3-1.4c5.8-23.9 13.1-53.7 7.4-80.7-3.8-21.3-19.5-29.6-32.9-30.2-15.8-0.7-29.9 8.3-33.4 21.4-6.6 24-0.7 56.8 10.1 98.6-13.6 32.4-35.3 79.5-51.2 107.5-29.6 15.3-69.3 38.9-75.2 68.7-1.2 5.5 0.2 12.5 3.5 18.8 3.7 7 9.6 12.4 16.5 15 3 1.1 6.6 2 10.8 2 17.6 0 46.1-14.2 84.1-79.4 5.8-1.9 11.8-3.9 17.6-5.9 27.2-9.2 55.4-18.8 80.9-23.1 28.2 15.1 60.3 24.8 82.1 24.8 21.6 0 30.1-12.8 33.3-20.5 5.6-13.5 2.9-30.5-6.2-39.6-13.2-13-45.3-16.4-95.3-10.2-24.6-15-40.7-35.4-52.4-65.8zM421.6 726.3c-13.9 20.2-24.4 30.3-30.1 34.7 6.7-12.3 19.8-25.3 30.1-34.7z m87.6-235.5c5.2 8.9 4.5 35.8 0.5 49.4-4.9-19.9-5.6-48.1-2.7-51.4 0.8 0.1 1.5 0.7 2.2 2z m-1.6 120.5c10.7 18.5 24.2 34.4 39.1 46.2-21.6 4.9-41.3 13-58.9 20.2-4.2 1.7-8.3 3.4-12.3 5 13.3-24.1 24.4-51.4 32.1-71.4z m155.6 65.5c0.1 0.2 0.2 0.5-0.4 0.9h-0.2l-0.2 0.3c-0.8 0.5-9 5.3-44.3-8.6 40.6-1.9 45 7.3 45.1 7.4z"
+                                            p-id="5071"></path>
+                                        <path d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326z m1.8 562H232V136h302v216c0 23.2 18.8 42 42 42h216v494z"
+                                            p-id="5072"></path>
+                                    </svg>
+                                </div>
+                                <div class="file-info">
+                                    <div class="file-name">
                                 <span>
-                                        <p><a href="{{ file_url }}">{{ simple_file_name }}</a></p>
+                                    <p><a href="{{ file_url }}">{{ simple_file_name }}</a></p>
                                 </span>
-                                        </div>
-                                        <div class="progress" style="width: 200px;">
-                                            <div class="progress-bar bg-success progress-bar-striped progress-bar-animated"
-                                                 style="width:100%" id="success-bar">
-                                            </div>
+                                    </div>
+                                    <div class="progress" style="width: 200px;">
+                                        <div class="progress-bar bg-success progress-bar-striped progress-bar-animated"
+                                            style="width:100%" id="success-bar">
                                         </div>
                                     </div>
                                 </div>
-                                <h3 id="status">100%</h3>
-                                <button type="button" class="btn-close btn-sm" aria-label="Close"></button>
                             </div>
+                            <h3 id="status">100%</h3>
+                            <button type="button" class="btn-close btn-sm" aria-label="Close"></button>
+                        </div>
                         {% endif %}
-
-                        <div class="flex justify-center p-5">
-                            {#                            <button type="submit" id="upload-btn"#}
-                            {#                                    class="my-5 w-full flex justify-center bg-blue-500 text-gray-100 p-4  rounded-full tracking-wide font-semibold  focus:outline-none focus:shadow-outline hover:bg-blue-600 shadow-lg cursor-pointer transition ease-in duration-300">#}
-                            {#                                Upload#}
-                            {#                            </button>#}
+                        <div class="flex justify-center p-3">
                             <button type="submit" id="upload-btn" class="button">
                                 <svg class="svgIcon" viewBox="0 0 384 512">
                                     <path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"></path>
@@ -124,6 +99,8 @@
             </div>
         </div>
     </div>
+
+
 
     <script>
         /**
